force-app/main/default/objects/Cidade__c/Cidade__c.object-meta.xml
<CustomObject>
    <description>Campo para armazenar cidades - SAP</description>
    <label>Cidade</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>