force-app/main/default/objects/Cidade__c/fields/CodigoSAP__c.field-meta.xml
<CustomField>
    <fullName>CodigoSAP__c</fullName>
    <description>Campo para armazenar ID do codigo SAP do objeto personalizado Cidade</description>
    <externalId>true</externalId>
    <label>Código SAP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>