force-app/main/default/objects/Cidade__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Campo para armazenar Country do obj. pers. Cidade.</description>
    <label>País</label>
    <length>30</length>
    <type>Text</type>
</CustomField>