force-app/main/default/objects/Cidade__c/fields/IBGECode__c.field-meta.xml
<CustomField>
    <fullName>IBGECode__c</fullName>
    <description>Campo para armazenar IBGE Code do obj pers. Cidade</description>
    <externalId>true</externalId>
    <label>Código IBGE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>