force-app/main/default/objects/Cidade__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Campo para armazenar State do obj. pers. Cidade.</description>
    <label>Estado</label>
    <length>30</length>
    <type>Text</type>
</CustomField>